# rust-yandex

./: .gitignore  Cargo.toml  README.md  test.txt
.github/workflows/: ci.yml
Notes/: RustCommands.txt  Вопросы.txt
aux/for_comparator/: 49_records.txt  50_last_changed.txt  50_records.txt  test.txt
bank-system/aux/: balance.csv
bank-system/examples/: balance.rs  balance_bad_operations.rs  cli.rs  macros_example.rs  storage_find_best_use.rs
bank-system/src/: lib.rs  storage.rs  transaction_macros.rs
examples/: simple_use.rs
mutlithreading/: Cargo.toml
mutlithreading/examples/: rc_example.rs  text_parallel.rs  threads_creation.rs
mutlithreading/src/: main.rs
my-system/: Cargo.toml
my-system/src/: main.rs
my_macros/: Cargo.toml
my_macros/src/: lib.rs
practice/module_2/quotes-streaming/: Cargo.toml  README.md
practice/module_2/quotes-streaming/aux/: client_2_tickers.txt
practice/module_2/quotes-streaming/examples/: quote_generator_example.rs
practice/module_2/quotes-streaming/src/: lib.rs  quotes.rs
practice/module_3_blog/: .gitignore  Cargo.toml  README.md  Очень_ценные_комментарии_на_ревью_Святослава_Никольского.txt
practice/module_3_blog/blog-cli/: Cargo.toml
practice/module_3_blog/blog-cli/src/: main.rs
practice/module_3_blog/blog-client/: Cargo.toml  build.rs
practice/module_3_blog/blog-client/proto/: blog.proto
practice/module_3_blog/blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
practice/module_3_blog/blog-server/: Cargo.toml  build.rs  example.env
practice/module_3_blog/blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
practice/module_3_blog/blog-server/proto/: blog.proto
practice/module_3_blog/blog-server/src/: main.rs
practice/module_3_blog/blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
practice/module_3_blog/blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
practice/module_3_blog/blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
practice/module_3_blog/blog-server/src/infrastructure/: database.rs  jwt.rs  logging.rs  mod.rs
practice/module_3_blog/blog-server/src/presentation/: dto.rs  grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
practice/module_3_blog/blog-wasm/: Cargo.toml  demo_multiple.html  demo_single.html  index.html
practice/module_3_blog/blog-wasm/src/: dto.rs  lib.rs  main.rs
practice/module_4_ffi_plugins/: Cargo.toml  README.md
practice/module_4_ffi_plugins/aux/: blur_params.txt  mirror_params.txt
practice/module_4_ffi_plugins/blur_plugin/src/: lib.rs
practice/module_4_ffi_plugins/image_processor/: Cargo.toml
practice/module_4_ffi_plugins/image_processor/src/: error.rs  main.rs  plugin_loader.rs
practice/module_4_ffi_plugins/mirror_plugin/src/: lib.rs
practice/module_5_errors_optimization/: Cargo.toml  Steps.txt
practice/module_5_errors_optimization/artifacts/: all_analysys_after.txt  gdb_output.txt  miri_before.txt  regression_miri_valgrind.txt  uaf_and_concurrency_after.txt  uaf_and_concurrency_before.txt  valgrind_before.txt
practice/module_5_errors_optimization/artifacts/optimization_initial/: benches.txt  perf.data  perf_report.txt
practice/module_5_errors_optimization/src/: concurrency.rs  lib.rs
practice/module_5_errors_optimization/tests/: regression.rs  uaf_and_concurrency.rs
src/: bin_format.rs  csv_format.rs  error.rs  lib.rs  main.rs  report.rs  text_format.rs  transaction.rs
theory/Notes/: RustCommands.txt  RustInstallation.txt  Вопросы.txt
theory/async-await/examples/: async_connections.rs  join_vs_spawn_concurrency.rs
theory/module_0/yandex_course/: Cargo.toml
theory/module_0/yandex_course/aux/: game_config.txt
theory/module_0/yandex_course/src/: main.rs
theory/module_1/bank-system/: Cargo.toml
theory/module_1/bank-system/examples/: balance_asm.s  cli.rs  (+11 more)
theory/module_2/tcp-vault/: Cargo.toml
theory/module_2/udp-room-monitoring/: Cargo.toml
theory/module_2/udp-room-monitoring/examples/: demo.rs  receiver_simulator.rs  sensor_simulator.rs
theory/module_2/udp-room-monitoring/src/: lib.rs  metrics.rs  receiver.rs  sender.rs
theory/module_3/async-await/: Cargo.toml
theory/module_3/tokio-features/: Cargo.toml
theory/module_3/topic_3/lesson_3_http_server/bank-api/: Cargo.toml
theory/module_3/topic_3/lesson_3_http_server/bank-api-advanced/: Cargo.toml  README.md
theory/module_3/topic_3/lesson_3_http_server/bank-api-advanced/src/: main.rs
theory/module_3/topic_3/lesson_3_http_server/bank-api/src/: main.rs
theory/module_3/topic_3/lesson_3_http_server/http-server/: Cargo.toml  curl_commands.txt
theory/module_3/topic_3/lesson_3_http_server/http-server/src/: main.rs
theory/module_3/topic_3/lesson_3_http_server/http-server/src/presentation/: middleware.rs
theory/module_3/topic_4_cli_frontend/lesson_2_frontend/: Cargo.toml  index.html  style.css
theory/module_3/topic_4_cli_frontend/lesson_2_frontend/src/: main.rs
theory/module_4_ffi_unsafe/topic_3_libraries/lesson_1_bindgen/rust_to_c_python/: Cargo.toml
theory/module_4_ffi_unsafe/topic_3_libraries/lesson_1_bindgen/rust_to_c_python/examples/: main.c  use_rust.py
theory/module_4_ffi_unsafe/topic_3_libraries/lesson_1_bindgen/rust_to_c_python/src/: lib.rs
theory/module_5_debug_profiling/topic_2_optimization/lesson_2_optimization_stages/optimization-practice/: Cargo.toml  additional_practice.txt  additional_practice_2.txt  perf.data
theory/module_5_debug_profiling/topic_2_optimization/lesson_2_optimization_stages/optimization-practice/benches/: json_bench.rs
theory/module_5_debug_profiling/topic_2_optimization/lesson_2_optimization_stages/optimization-practice/src/: lib.rs  main.rs
trait-objects/: notes_dyn_impossible.txt
udp-room-monitoring/examples/: demo_features.rs
udp-room-monitoring/src/: lib.rs  logger.rs  logging.rs
yandex_course/: rustfmt.toml
yandex_course/aux/: app.conf  text.txt
yandex_course/src/: main.rs
yandex_course/src/basics/: borrowing.rs  config.rs  errors_processing.rs  functions.rs  mod.rs  smart_pointers.rs  types.rs
(+149 files in other folders)
