[package]
name = "parser"
version = "0.1.0"
edition = "2024"
# Дефолтный исполняемый файл для cargo run
default-run = "parser"

# Секция генерируемых бинарников, создаём несколько
[[bin]]
name = "parser"
path = "src/main.rs"

[[bin]]
name = "comparator"
path = "src/bin/comparator.rs"

[lib]
name = "parser"
path = "src/lib.rs"

# Для переводов в сетевой порядок байтов и обратно
[dependencies]
byteorder = "1.5.0"
