# rust-yandex/Cargo.toml
[workspace]

resolver = "2"
members = [
    # "theory/module_4_ffi_unsafe/topic_3_libraries/lesson_3_plugins/complex_example","theory/module_4_ffi_unsafe/topic_3_libraries/lesson_3_plugins/simple_example"
    # "theory/module_4_ffi_unsafe/topic_2_libraries/lesson_1_bindgen/cjson_bind"
    # "theory/module_4_ffi_unsafe/topic_2_libraries/lesson_1_bindgen/bindgen_example"
    # "theory/module_4_ffi_unsafe/topic_1_linking/dyn_lib_linking"
    # "theory/module_3/topic_3/lesson_6_db"
    # "practice/module_1/parser",
    # "practice/module_2/quotes-streaming",
    # , "theory/module_4_ffi_unsafe/topic_1_linking/lesson_1_linking/hello-dyn"
    # "theory/module_4_ffi_unsafe/topic_2_libraries/lesson_1_bindgen/rust_to_python"
    # , "theory/module_5_debug_profiling/topic_2_optimization/lesson_1_basics/debug-profile-practice"
    # , "theory/module_5_debug_profiling/topic_2_optimization/lesson_1_basics/dwarf-practice"
    # , "theory/module_5_debug_profiling/topic_2_optimization/lesson_1_basics/bad-factorial"
    # , "theory/module_5_debug_profiling/topic_2_optimization/lesson_2_optimization_stages/optimization-practice"]

]
# Пока помечаю проекты независимыми (в VSCode тогда открывать отдельно директории, а то rust-analyzer не сдюжит)
exclude = ["theory", "practice"]
