#  Делаем через Workspace, 4 крата - зависимости на основе проектов теории
#  cargo check --workspace - проверка

# Тут немного неструктурированно получилось относительно входящих кратов, причешу при необходимости

[workspace]
members = ["blog-server", "blog-client", "blog-cli", "blog-wasm"]
resolver = "2"

[workspace.dependencies]
# HTTP и gRPC
actix-web = "4"
actix-cors = "0.7"
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
async-trait = "0.1"

# БД и сериализация
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI и WASM
clap = { version = "4", features = ["derive"] }
yew = { version = "0.21", features = ["csr"] }
reqwasm = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "HtmlInputElement", "Event", "InputEvent", "console",
    # Для многострочных полей, нужен для создания поста
    "HtmlTextAreaElement"   
    ] }
    # , "Window", "Storage"] }

# Для HTTP-запросов (WASM-часть)
gloo-net = "0.6"

# Утилиты и безопасность
argon2 = "0.5"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }

# Ошибки
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
time = { version = "0.3", features = ["macros"] }

# Environment
dotenvy = "0.15"