[package]
name = "quotes-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5.15"

[[bin]]
 name = "server"    
 path = "src/bin/server.rs"     

# [[bin]]    
# name = "client"    
# path = "src/bin/client.rs"

# Для тестирования с помощью CLI
[[bin]]    
name = "client"    
path = "src/bin/client_cli.rs"