[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

# Пока зависимости на основе теории

[dependencies]
# HTTP
actix-web = { workspace = true }
actix-cors = { workspace = true }
# actix-web-httpauth = { workspace = true }

# gRPC
# tonic = { workspace = true }
# prost = { workspace = true }
# prost-types = { workspace = true }

# БД
sqlx = { workspace = true }

# JSW, пароль
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }

# Остальное
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }