[package]
name = "lesson_2_frontend"
version = "0.1.0"
edition = "2024"

# (!) Доустановил вот это для запуска:
#    > rustup target add wasm32-unknown-unknown

[dependencies]
yew = { version = "0.21", features = ["csr"] }
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2" 