[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"]}
chrono = { version = "0.4.44", features = ["serde"] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.52.3"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
futures-util = "0.3.32"
actix = "0.13.5"
actix-web-actors = "4.3.1"
actix-cors = "0.7.1"
cors = "0.1.0"
