[package]
name = "optimization-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Обязательно дебаг-символы
[profile.release]
debug = 1 

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "json_bench"
harness = false
